# MDdzq

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: macos-build.yml  windows-build.yml
mac/: .gitignore  Makefile  README.md  project.yml
mac/MDReader/: AppIcon.icns  Commands.swift  ContentView.swift  DocumentSession.swift  FileTree.swift  FileTreeView.swift  Info.plist  MDReader.entitlements  MDReaderApp.swift  MarkdownDocument.swift  MarkdownWebView.swift  OutlineView.swift  RecentFiles.swift  Sidebar.swift  WorkspaceWatcher.swift
mac/MDReader/Assets.xcassets/AppIcon.appiconset/: Contents.json
mac/Resources/: viewer.css  viewer.html
mac/Samples/: test-sample.md
mac/build-web/: build.mjs  package-lock.json  package.json
mac/build-web/entries/: mermaid.entry.js  viewer.entry.js
win/: .gitignore  README.md
win/src-tauri/: Cargo.toml  tauri.conf.json
win/src-tauri/capabilities/: default.json
win/src-tauri/src/: bridge.js  lib.rs  main.rs
